# pepa-sensory-arm

./: .flake8  CONTRIBUTING.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  repository.yaml  requirements_dev.txt
.github/workflows/: ci.yml  release.yml  sync-issues-to-private.yml  validate-version.yml
custom_components/home_agent/: const.py  manifest.json  vector_db_manager.py
custom_components/pepa_sensory_arm/: __init__.py  chroma_factory.py  config_flow.py  const.py  context_manager.py  context_optimizer.py  conversation.py  embedder.py  exceptions.py  helpers.py  manifest.json  memory_interface.py  memory_manager.py  pyscript_deploy.py  repairs.py  services.yaml  streaming.py  strings.json  tool_handler.py  vector_db_manager.py
custom_components/pyscript/: entities_list.py  entity_context.py  pepa_behavioral_capture.py
docs/: AGENT_TOOL_MAPPINGS.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CUSTOM_TOOLS.md  DEGRADED_MODE.md  DEGRADED_MODE_UAT.md  EXAMPLES.md  EXAMPLE_CONFIGS.md  EXTERNAL_LLM.md  FAQ.md  HACS_TROUBLESHOOTING.md  INSTALLATION.md  MEMORY_INTERFACE.md  MEMORY_SYSTEM.md  MIGRATION.md  P2_IMPLEMENTATION_LOG.md  TROUBLESHOOTING.md  VECTOR_DB_SETUP.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  helpers.py  test_config_reconfiguration.py  test_config_variations.py  test_context_manager.py  test_context_optimization.py  test_conversation_history.py  test_disabled_features.py  test_edge_cases.py  test_graceful_degradation.py  test_keep_alive_openai_compat.py  test_language_edge_cases.py  test_language_switching.py  test_memory_vectordb_integration.py  test_multi_tool_sequence.py  test_multilingual_conversations.py  test_observability_events.py  test_phase2_vector_db.py  test_phase3_custom_tools.py  test_phase3_external_llm.py  test_phase4_streaming.py  test_phase4_streaming_failures.py  test_real_llm.py  test_real_memory.py  test_real_ttft_metrics.py  test_real_vector_db.py  test_realistic_ha_streaming.py  test_thinking_blocks.py  test_tool_parameter_validation.py  test_voice_conversation_persistence.py
tests/mocks/: __init__.py  fixtures.py
tests/unit/: __init__.py  conftest.py  test_agent_language_support.py  test_agent_streaming.py  test_agent_thinking_blocks.py  test_azure_openai_support.py  test_borrowed_client_killed.py  test_build_system_prompt.py  test_chroma_factory.py  test_cloudflare_gateway_compat.py  test_config_boundaries.py  test_config_flow.py  test_context_manager.py  test_context_optimizer.py  test_embedder.py  (+21 more)
(+42 files in other folders)
