[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*"]

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "fixme",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "fp", "id", "_", "db"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 10
addopts = "-n 2"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    "ignore:Unclosed client session:ResourceWarning",
    "ignore:Enable tracemalloc:ResourceWarning",
    "ignore:Task was destroyed but it is pending:ResourceWarning",
]
markers = [
    "integration: Integration tests requiring external services (ChromaDB, LLM, etc.)",
    "e2e: End-to-end tests covering complete workflows",
    "smoke: Quick smoke tests for basic functionality verification",
    "performance: Performance benchmark tests",
]

[tool.coverage.run]
source = ["custom_components/pepa_sensory_arm"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
